gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-exclusive-range-pattern.rs
pub fn main() {
    match 22 {
        0 .. 3 => {} // { dg-error ".E0658." "" { target *-*-* } }
        _ => {}
    }
}

